# Neptune

./: .gitignore  .gitmodules  CMakeLists.txt  CodeConvention.txt  README.md  gitclean.sh  main.c  main_dma.c  rebuild.sh  rh_common.h  utility.cmake
app/: main.c  rh_app.cmake  rh_app.h  rh_watch.c  rh_watch.h
app/component/clock/: rh_app_clock.c  rh_app_clock.h
app/component/clock/asset/: clock_theme_usc.c
app/component/cmn/: rh_app_cmn.h
app/component/gui/: rh_app_gui.c  rh_app_gui.h
app/component/task/: rh_app_task.c  rh_app_task.h
app/component/time/: rh_app_time.c  rh_app_time.h
app/component/trace/: rh_app_trace.c  rh_app_trace.h
app/component/trace/ci/: sanity.c
app/component/util/: rh_app_utility.c  rh_app_utility.h
app/interface/: rh_app_interface.c  rh_app_interface.h
bsp/: rh_bsp.cmake  rh_bsp.h  rh_bsp_key.c  rh_bsp_key.h  rh_bsp_led.c  rh_bsp_led.h  rh_bsp_screen.c  rh_bsp_screen.h
cfg/: FreeRTOSConfig.h  lv_conf.h  rh_cfg_const.xml  startup_stm32f411xe.S  stm32f4xx_hal_conf.h
cmn/: rh_cmn.cmake  rh_cmn.h  rh_cmn_assert.h  rh_cmn_chip.c  rh_cmn_chip.h  rh_cmn_clk.c  rh_cmn_clk.h  rh_cmn_delay.c  rh_cmn_delay.h  rh_cmn_gpio.c  rh_cmn_gpio.h  rh_cmn_isr.c  rh_cmn_math.c  rh_cmn_math.h  rh_cmn_mem.c  rh_cmn_mem.h  rh_cmn_rtc.c  rh_cmn_rtc.h  rh_cmn_spi.c  rh_cmn_spi.h  rh_cmn_usart.c  rh_cmn_usart.h
doc/: CodeConvention.txt
lib/: rh_lib.cmake
sch/: SCH_Embedded Watch_2023-10-23.json
sch/V1/: BOM_PCB_Embedded Watch_2023-10-27.csv  PickAndPlace_PCB_Embedded Watch_2023-10-27.csv  SCH_Embedded Watch_2023-10-27.json
sch/V2/: BOM_PCB_Embedded Watch_2023-10-30.csv  PickAndPlace_PCB_Embedded Watch_2023-10-30.csv  SCH_Embedded Watch_2023-10-30.json
sqstudio/: watch.sll  watch.spj
sqstudio/assets/: battery-alpha.psd
sqstudio/assets/font/: ui_font_CourierNewBold36.c  ui_font_CourierNewBold36.fcfg  ui_font_CourierNewBold40.c  ui_font_CourierNewBold40.fcfg  ui_font_CourierNewBold44.fcfg  ui_font_CourierNewBold48.fcfg
sqstudio/fonts/: ui_font_CourierNewBold44.c  ui_font_CourierNewBold48.c
